2004-09-23  David Malcolm  <david@davemalcolm.demon.co.uk>

	* conglomerate.types: 

	Added the various plugin/service GObject types

	* conglomerate-sections.txt: 

	Added titles for various sections

	* conglomerate-docs.sgml: 

	Reorganisation, mainly of plugins section

2004-09-07 Douglas Burke <dburke@cfa.harvard.edu>

	* conglomerate-docs.sgml

	Converted to match GTK+ docs (use of part rather than chapter
	to provide document structure). Added an index.
	
2004-09-02 Douglas Burke <dburke@cfa.harvard.edu>

	* conglomerate-docs.sgml

	Corrected a typo in a link attribute added in previous change.
	Added sect1 around initial text in the "The Editow Widget"
	chapter to match docbook DTD.

2004-09-01 Douglas Burke <dburke@cfa.harvard.edu>

	* conglomerate-docs.sgml

	Added missing pages (some may not be added to the best
	section) and updated the existing text to include links
	to pages.

	* conglomerate.types

	Added some missing include files/_get_type() functions.
	
2004-06-23 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* README: Update.

	* conglomerate-sections.txt, conglomerate-types.txt:
	* conglomerate-overrides.txt: Update for recent sources.

	* conglomerate-docs.sgml: XInclude replaced with external
	entities. This is common practice of gtk-doc usage.

2003-12-22  Geert Stappers <stappers@stappers.nl>

	* Makefile.am:
	- Added --main-sgml-file to gtkdoc-mkdb (as found in upstream example)
	- Minor cosmetic changes

2003-11-04  Boris Goldowsky  <boris@alum.mit.edu>

	* Makefile.am: don't die if index.sgml is missing.

2003-10-28  Geert Stappers <stappers@stappers.nl>

	* Makefile.am:
	- Removed calling the upstream mkgtkdoc scripts.
	- DOC_OVERRIDES only defined once.
	- original 'dist-hook directories'

2003-10-26  Robert Varga <frozenfingers@home.ro>

	* conglomerate-docs.sgml:
	
	Syncronized with source - added missing includes

2003-10-25  Geert Stappers <stappers@stappers.nl>

	* Makefile.am:
	Renaming upstreamscripts
