@@ -145,11 +145,6 @@ src/cong-view.c
 src/cong-xpath-expression.c
 src/cursor.c
 src/file.c
-src/fo-parser-result.c
-src/fo-print-context.c
-src/fo-rect.c
-src/fo-solver-result.c
-src/fo-tests.c
 src/gxx-impl-object-to-xml-tree.c
 src/icon_assemble.c
 src/icon_connect.c
